# grpc-tonic-example

./: Cargo.toml  Makefile  README.md
grpc-client/: package.json  pnpm-lock.yaml  tsconfig.json
grpc-client/src/: main.ts
grpc-web-client/: index.html  package.json  pnpm-lock.yaml
grpc-web-client/src/: main.ts
proto/: helloworld.proto
server/: Cargo.toml
server/src/: main.rs
src/: main.rs
