[package]
name = "grpc-tonic-example"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
prost = "0.11.9"
tokio = { version = "1.32.0", features = ["full"] }
tonic = "0.9"
tonic-web = "0.9.2"
tower = "0.4.13"
tower-http = { version = "0.4.3", features = ["trace", "cors", "tower"] }
trace = "0.1.7"
tracing = "0.1.37"
tracing-subscriber = "0.3.17"

[build-dependencies]
tonic-build = "0.9"

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"

# Set the default for dependencies.
[profile.dev.package."*"]
opt-level = 3
debug = false
debug-assertions = false
overflow-checks = false
incremental = false


[profile.release.package."*"]
opt-level = 3
debug = false
debug-assertions = false
overflow-checks = false
incremental = false
